--- a/.github/workflows/parse.yml
+++ b/.github/workflows/parse.yml
@@ -1,4 +1,4 @@
-name: Parse moon data
+name: Moon Data Parser
 
 on:
   workflow_dispatch:
@@ -11,45 +11,22 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python 3.10
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install selenium undetected-chromedriver beautifulsoup4
+          pip install -r requirements.txt
 
-      - name: Run parser script
-        id: parse
+      - name: Run and save parser output
         run: |
-          # Run script and capture output
-          JSON_OUTPUT=$(python parse_data.py)
-          
-          # Validate JSON
-          if ! jq -e . >/dev/null 2>&1 <<<"$JSON_OUTPUT"; then
-            echo "::error::Invalid JSON output"
-            exit 1
-          fi
-          
-          # Save to file and set output
-          echo "$JSON_OUTPUT" > moon_data.json
-          echo "json_data<<EOF" >> $GITHUB_OUTPUT
-          echo "$JSON_OUTPUT" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-          
-          # For debugging
-          echo "First 100 chars of JSON:"
-          echo "$JSON_OUTPUT" | head -c 100
+          python parse_data.py > moon_data.json
+          echo "Файл moon_data.json создан"
 
-      - name: Upload moon data
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: moon-data
           path: moon_data.json
-
-      - name: Show result
-        run: |
-          echo "Data saved to moon_data.json"
-          echo "JSON length: ${#{{ steps.parse.outputs.json_data }}} characters"
