--- a/.github/workflows/update_dynamic.yml
+++ b/.github/workflows/update_dynamic.yml
@@ -73,47 +73,21 @@ jobs:
         run: |
           DATA_FILE="./artifacts/moon_data_processed.json"
           
-          # Извлекаем данные и экранируем для JavaScript
+          # Извлекаем данные
           moon_today=$(jq -r '.moon_today.moon_today | "\(.current_time)\n🌙 Phase: \(.moon_phase_tonight)\nNew Moon: \(.new_moon)\nFirst Quarter: \(.first_quarter)"' "$DATA_FILE")
-          
           moon_dream=$(jq -r '.moon_dream.moon_dream.time_translated' "$DATA_FILE")
-          
           inspiration=$(jq -r '.inspiration.inspiration | "\(.content)\n\n— \(.author)"' "$DATA_FILE")
           
-          # Сохраняем в переменные окружения (экранируем специальные символы)
-          {
-            echo "MOON_TODAY<<EOF_MOON_TODAY"
-            echo "$moon_today"
-            echo "EOF_MOON_TODAY"
-          } >> $GITHUB_ENV
+          # Сохраняем в файлы для безопасной передачи
+          echo "$moon_today" > /tmp/moon_today.txt
+          echo "$moon_dream" > /tmp/moon_dream.txt
+          echo "$inspiration" > /tmp/inspiration.txt
           
-          {
-            echo "MOON_DREAM<<EOF_MOON_DREAM"
-            echo "$moon_dream"
-            echo "EOF_MOON_DREAM"
-          } >> $GITHUB_ENV
+          echo "✅ Data extracted and saved to temp files"
           
-          {
-            echo "INSPIRATION<<EOF_INSPIRATION"
-            echo "$inspiration"
-            echo "EOF_INSPIRATION"
-          } >> $GITHUB_ENV
-          
-          echo "✅ Data extracted and formatted"
-          
-      - name: Update JavaScript file
+      - name: Create JavaScript template
         run: |
-          JS_FILE="js/lunar_majesty.js"
-          
-          echo "🔄 Updating JavaScript file..."
-          
-          # Экранируем данные для безопасной вставки в JavaScript
-          MOON_TODAY_ESCAPED=$(printf '%s\n' "$MOON_TODAY" | sed 's/[[\.*^$()+?{|]/\\&/g' | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
-          MOON_DREAM_ESCAPED=$(printf '%s\n' "$MOON_DREAM" | sed 's/[[\.*^$()+?{|]/\\&/g' | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
-          INSPIRATION_ESCAPED=$(printf '%s\n' "$INSPIRATION" | sed 's/[[\.*^$()+?{|]/\\&/g' | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
-          
-          # Создаем новый JavaScript файл
-          cat > "$JS_FILE" << 'JSEOF'
+          cat > /tmp/js_template.js << 'EOF'
 const cards = [
   {
     title: "Moon today",
@@ -139,7 +113,6 @@ function updateCard() {
     titleElement.textContent = cards[currentIndex].title;
     contentElement.innerHTML = cards[currentIndex].content.replace(/\n/g, '<br>');
     
-    // Добавляем плавный эффект при смене карточки
     const card = document.getElementById("carousel-card");
     card.style.opacity = '0.7';
     setTimeout(() => {
@@ -158,11 +131,9 @@ function prevCard() {
   updateCard();
 }
 
-// Инициализация при загрузке страницы
 document.addEventListener('DOMContentLoaded', function() {
   updateCard();
   
-  // Поддержка клавиатуры
   document.addEventListener('keydown', function(event) {
     if (event.key === 'ArrowLeft') {
       prevCard();
@@ -171,12 +142,24 @@ document.addEventListener('DOMContentLoaded', function() {
     }
   });
 });
-JSEOF
+EOF
           
-          # Подставляем данные
-          sed -i "s/MOON_TODAY_PLACEHOLDER/$MOON_TODAY_ESCAPED/g" "$JS_FILE"
-          sed -i "s/MOON_DREAM_PLACEHOLDER/$MOON_DREAM_ESCAPED/g" "$JS_FILE"
-          sed -i "s/INSPIRATION_PLACEHOLDER/$INSPIRATION_ESCAPED/g" "$JS_FILE"
+      - name: Update JavaScript file
+        run: |
+          JS_FILE="js/lunar_majesty.js"
+          
+          echo "🔄 Updating JavaScript file..."
+          
+          # Читаем данные из файлов и экранируем
+          MOON_TODAY=$(cat /tmp/moon_today.txt | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
+          MOON_DREAM=$(cat /tmp/moon_dream.txt | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
+          INSPIRATION=$(cat /tmp/inspiration.txt | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
+          
+          # Копируем шаблон и заменяем плейсхолдеры
+          cp /tmp/js_template.js "$JS_FILE"
+          sed -i "s/MOON_TODAY_PLACEHOLDER/$MOON_TODAY/g" "$JS_FILE"
+          sed -i "s/MOON_DREAM_PLACEHOLDER/$MOON_DREAM/g" "$JS_FILE"
+          sed -i "s/INSPIRATION_PLACEHOLDER/$INSPIRATION/g" "$JS_FILE"
           
           echo "✅ JavaScript file updated"
           
@@ -191,7 +174,6 @@ JSEOF
           git config --local user.email "lunar-bot@github.com"
           git config --local user.name "Lunar Majesty Bot"
           
-          # Проверяем наличие изменений
           if git diff --quiet; then
             echo "📄 No changes detected"
             exit 0
