Prevent multiple simultaneous runs

--- a/.github/workflows/parse+process.yml
+++ b/.github/workflows/parse+process.yml
@@ -15,6 +15,11 @@ on:
   schedule:
     - cron: '0 0 * * *' 
     
+# Prevent multiple simultaneous runs
+concurrency:
+  group: lunar-data-processing
+  cancel-in-progress: true
+  
 jobs:
   parse-and-process:
     runs-on: ubuntu-latest  # Primary worker node
