<- Added more cron tasks for late source updates

--- a/.github/workflows/parse+process.yml
+++ b/.github/workflows/parse+process.yml
@@ -23,6 +23,8 @@ on:
   workflow_dispatch: 
   schedule:
     - cron: '0 0 * * *' 
+    - cron: '0 12 * * *'  
+    - cron: '0 15 * * *' 
     
 jobs:
   parse-and-process-attempt1: 
