--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-selenium
-undetected_chromedriver
-beautifulsoup4
-pyperclip
+selenium==4.34.2
+undetected_chromedriver==3.5.5
+beautifulsoup4==4.13.4
+pyperclip==1.9.0
